--- a/main.css
+++ b/main.css
@@ -134,6 +134,7 @@ a {
      background-position: center;
      font-family: 'Red Hat Display';
      text-align: center;
+     background-color: hsl(226, 100%, 91%);
  }
 
  main {
